--- a/paginas/comic.html
+++ b/paginas/comic.html
@@ -9,13 +9,12 @@
 <body>
     <header>
         <div class="logo">
-            <img src="imagenes/aaaaaa.jpg" class="img">
-            <h1 class="titulo">Libros</h1>
+            <img src="../imagenes/logo 2.webp" height="200" width="200" class="fotoini">
+            <h1 class="titulo">Comics</h1>
         </div>
         <div class="col-lg-12 menu">
-          <button type="button" class="btn"><a href="paginas/versiones.html">Versiones</a></button>
-            <button type="button" class="btn"><a href="paginas/juegos.html">Juegos</a></button>
-            <button type="button" class="btn"><a href="paginas/registro.html">Registro</a></button>
+          <button type="button" class="btn"><a href="mangas.html">Mangas</a></button>
+            <button type="button" class="btn"><a href="../libros.html">Biblioteca</a></button>
             <div class="btn-group">
                 </div>
             </div>
