--- a/libros.html
+++ b/libros.html
@@ -15,7 +15,7 @@
         <div class="col-lg-12 menu">
           <button type="button" class="btn"><a href="paginas/comic.html">Comics</a></button>
             <button type="button" class="btn"><a href="paginas/mangas.html">Mangas</a></button>
-            <button type="button" class="btn"><a href="paginas/registro.html">Registro</a></button>
+            <button type="button" class="btn"><a href="paginas/registro.html">Reegistro</a></button>
             <div class="btn-group">
                 </div>
             </div>
