Agrege libros en la pagina principal

--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <form action="#">
-            <h2>Welcome</h2>
+            <h2>Registrate Para Leer</h2>
             <div class="input-field">
                 <input type="text" required>
                 <label>Enter your email</label>
