--- a/libros.html
+++ b/libros.html
@@ -13,13 +13,33 @@
             <h1 class="titulo">Biblioteca</h1>
         </div>
         <div class="col-lg-12 menu">
-          <button type="button" class="btn"><a href="paginas/comic.html">Comics</a></button>
-            <button type="button" class="btn"><a href="paginas/mangas.html">Mangas</a></button>
-            <button type="button" class="btn"><a href="paginas/registro.html">Reegistro</a></button>
-            <div class="btn-group">
-                </div>
-            </div>
+            <button type="button" class="btn margi"><a href="paginas/comic.html">Comics</a></button>
+            <button type="button" class="btn margi"><a href="paginas/mangas.html">Mangas</a></button>
+            <button type="button" class="btn margi"><a href="paginas/registro.html">Registro</a></button>
+            <div class="btn-group"></div>
         </div>
     </header>
+    <div class="contenerdor1">
+        <img src="imagenes/Parasitos-perfectos.libro1.jpg" class="libro1">
+        <img src="imagenes/La caza del carnero salvaje.libro2.jpeg" class="libro2" >
+        <img src="imagenes/socorro!.libro3.jpg" class="libro3" >
+    </div>
+    <div class="nombreautores-libros1">
+        <h1>ㅤLuis Carlos</h1>
+        <h1>ㅤHaruki Murakami</h1>
+        <h1>Elsa Bornemann</h1>
+    </div>
+
+    <div class="contenerdor2">
+        <img src="imagenes/el beso.libro4.jpg" class="libro4">
+        <img src="imagenes/el-curioso-incidente-del-perro-a-medianoche.libro5.jpg" class="libro5" >
+        <img src="imagenes/libro6.jpg" class="libro6">
+    </div>
+    <div class="nombreautores-libros1">
+        <h1>Manuel Puig</h1>
+        <h1>ㅤMark Haddon</h1>
+        <h1>Sáenz de Urturi</h1>
+    </div>
+    
 </body>
 </html>
