--- a/paginas/comic.html
+++ b/paginas/comic.html
@@ -10,11 +10,10 @@
     <header>
         <div class="logo">
             <img src="../imagenes/logo 2.webp" height="200" width="200" class="fotoini">
-            <h1 class="titulo">Comics</h1>
-        </div>
+            <h1 class="titulo">Comics</h1></div>
         <div class="col-lg-12 menu">
-          <button type="button" class="btn"><a href="mangas.html">Mangas</a></button>
-            <button type="button" class="btn"><a href="../libros.html">Biblioteca</a></button>
+          <button type="button" class="btn margi"><a href="mangas.html">Mangas</a></button>
+            <button type="button" class="btn margi"><a href="../libros.html">Biblioteca</a></button>
             <div class="btn-group">
                 </div>
             </div>
