--- a/paginas/mangas.html
+++ b/paginas/mangas.html
@@ -13,8 +13,8 @@
             <h1 class="titulo">Manga</h1>
         </div>
         <div class="col-lg-12 menu">
-          <button type="button" class="btn"><a href="comic.html">Comics</a></button>
-            <button type="button" class="btn"><a href="../libros.html">Biblioteca</a></button>
+          <button type="button" class="btn margi"><a href="comic.html">Comics</a></button>
+            <button type="button" class="btn margi"><a href="../libros.html">Biblioteca</a></button>
             <div class="btn-group">
                 </div>
             </div>
