agrege las redes en la pagina principal

--- a/libros.html
+++ b/libros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/libros.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -41,5 +41,19 @@
         <h1>Sáenz de Urturi</h1>
     </div>
     
+    <div class="codetheworld-io ">
+        <a href="#" style="--color: #ff0000" class="a-redes">
+            <i class="fa-brands fa-youtube"></i>
+        </a>
+        <a href="#" style="--color: #e1306c" class="a-redes">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" style="--color: #FF0050" class="a-redes">
+            <i class="fa-brands fa-tiktok" class="a-redes"></i>
+        </a>
+        <a href="#" style="--color: #00ffff" class="a-redes">
+            <i class="fa-brands fa-facebook" class="a-redes"></i>
+        </a>
+    </div>
 </body>
 </html>
