--- a/paginas/comic.html
+++ b/paginas/comic.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=p, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/comic.css">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/mangas.css">
+    <link rel="" href="">
+    <title>comic</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="../imagenes/logo 2.webp" height="200" width="200" class="fotoini">
-            <h1 class="titulo">Comics</h1></div>
-        <div class="col-lg-12 menu">
-          <button type="button" class="btn margi"><a href="mangas.html">Mangas</a></button>
-            <button type="button" class="btn margi"><a href="../libros.html">Biblioteca</a></button>
-            <div class="btn-group">
-                </div>
-            </div>
+            <img src="imagenes/comic icono.png" alt="">
+            <h1 class="titulo">COMIC</h1>
         </div>
-    </header>
 </body>
 </html>
