--- a/libros.html
+++ b/libros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Biblioteca</title>
 </head>
 <body>
     <header>
@@ -13,8 +13,9 @@
             <h1 class="titulo">Biblioteca</h1>
         </div>
         <div class="col-lg-12 menu">
+            <button type="button" class="btn margi"><a href="libros.html">Inicio</a></button>
             <button type="button" class="btn margi"><a href="paginas/comic.html">Comics</a></button>
-            <button type="button" class="btn margi"><a href="paginas/mangas.html">Mangas</a></button>
+            <button type="button" class="btn margi"><a href="mangas.html">Mangas</a></button>
             <button type="button" class="btn margi"><a href="paginas/registro.html">Registro</a></button>
             <div class="btn-group"></div>
         </div>
