finalize la pag manga

--- a/paginas/mangas.html
+++ b/paginas/mangas.html
@@ -6,24 +6,23 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/mangas.css">
+    <link rel="stylesheet" href="../css/mangas.css">
     <title>mangas</title>
 </head>
 <body>
     <header>
       <div class="logo">
-        <img src="imagenes/icomnga.png" class="fotoini">
+        <img src="../imagenes/icomnga.png" class="fotoini">
     </div>
     <div class="col-lg-12 menu">
       <button type="button" class="btn margi"><a href="libros.html">Inicio</a></button>
       <button type="button" class="btn margi"><a href="comic.html">Comics</a></button>
-      <button type="button" class="btn margi"><a href="mangas.html">Mangas</a></button>
-      <button type="button" class="btn margi"><a href="paginas/registro.html">Registro</a></button>
+      <button type="button" class="btn margi"><a href="registro.html">Registro</a></button>
         <div class="btn-group"></div>
     </div>
         <div class="row col-lg-10 contenedor">
           <div class="card" style="width: 18rem;">
-            <img src="imagenes/ball super.png" class="card-img-top" alt="...">
+            <img src="../imagenes/ball super.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h3 class="card-title">Dragon Ball Super 21</h3>
             </div>
@@ -40,7 +39,7 @@
               </div>
           </div>
           <div class="card"  style="width: 18rem;">
-            <img src="imagenes/dragonballsuper1.png" class="card-i mg-top" alt="...">
+            <img src="../imagenes/dragonballsuper1.png" class="card-i mg-top" alt="...">
             <div class="card-body">
               <h3 class="card-title">Dragon Ball Super 1</h3>
             </div>
@@ -57,7 +56,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-              <img src="imagenes/my hero academy.png" class="card-img-top" alt="...">
+              <img src="../imagenes/my hero academy.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title">My Hero Academy</h3>
               </div>
@@ -72,7 +71,7 @@
               </div>
             </div>
             <div class="card" style="width: 18rem;">
-              <img src="imagenes/titanes.png" class="card-img-top" alt="...">
+              <img src="../imagenes/titanes.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title">attack on titan</h3>
               </div>
@@ -87,7 +86,7 @@
               </div>
             </div>
             <div class="card" style="width: 18rem;">
-              <img src="imagenes/naruto.png" class="card-img-top" alt="...">
+              <img src="../imagenes/naruto.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title">Naruto</h3>
               </div>
@@ -105,10 +104,10 @@
       </header>
       <h1>Manga caro pobre </h1>
       <div class="futuro">
-        <div class="box"><img src="imagenes/siete pecados capitales.png" alt=""></div>
-        <div class="box"><img src="imagenes/puchman.png" alt=""></div>
-        <div class="box"><img src="imagenes/onepiece.png" alt=""></div>
-        <div class="box"><img src="imagenes/jujutsu kaisen.png" alt=""></div>
+        <div class="box"><img src="../imagenes/siete pecados capitales.png" alt=""></div>
+        <div class="box"><img src="../imagenes/puchman.png" alt=""></div>
+        <div class="box"><img src="../imagenes/onepiece.png" alt=""></div>
+        <div class="box"><img src="../imagenes/jujutsu kaisen.png" alt=""></div>
         </div>
       </div>
       <div class="text">
