--- a/libros.html
+++ b/libros.html
@@ -15,7 +15,7 @@
         <div class="col-lg-12 menu">
             <button type="button" class="btn margi"><a href="libros.html">Inicio</a></button>
             <button type="button" class="btn margi"><a href="paginas/comic.html">Comics</a></button>
-            <button type="button" class="btn margi"><a href="mangas.html">Mangas</a></button>
+            <button type="button" class="btn margi"><a href="paginas/mangas.html">Mangas</a></button>
             <button type="button" class="btn margi"><a href="paginas/registro.html">Registro</a></button>
             <div class="btn-group"></div>
         </div>
