unos retoques de manga

--- a/paginas/mangas.html
+++ b/paginas/mangas.html
@@ -15,7 +15,7 @@
         <img src="../imagenes/icomnga.png" class="fotoini">
     </div>
     <div class="col-lg-12 menu">
-      <button type="button" class="btn margi"><a href="libros.html">Inicio</a></button>
+      <button type="button" class="btn margi"><a href="../libros.html">Inicio</a></button>
       <button type="button" class="btn margi"><a href="comic.html">Comics</a></button>
       <button type="button" class="btn margi"><a href="registro.html">Registro</a></button>
         <div class="btn-group"></div>
@@ -102,16 +102,13 @@
             </div>
         </div>
       </header>
-      <h1>Manga caro pobre </h1>
+      <h1 class="text-caro">Manga Caro</h1>
       <div class="futuro">
         <div class="box"><img src="../imagenes/siete pecados capitales.png" alt=""></div>
         <div class="box"><img src="../imagenes/puchman.png" alt=""></div>
         <div class="box"><img src="../imagenes/onepiece.png" alt=""></div>
         <div class="box"><img src="../imagenes/jujutsu kaisen.png" alt=""></div>
         </div>
-      </div>
-      <div class="text">
-        <h1>footer</h1>
       </div>
       <div class="codetheworld-io ">
         <a href="#" style="--color: #ff0000" class="a-redes">
