agrege footer a comics y animacion

--- a/paginas/comic.html
+++ b/paginas/comic.html
@@ -14,8 +14,55 @@
 <body>
     <header>
         <div class="logo">
-            <img src="imagenes/comic icono.png" alt="">
-            <h1 class="titulo">COMIC</h1>
+            <img src="../imagenes/fotocomics.webp" height="200" width="200" class="fotoini">
+        <div class="col-lg-12 menu">
+            <button type="button" class="btn margi"><a href="mangas.html">Mangas</a></button>
+            <button type="button" class="btn margi"><a href="../libros.html">Biblioteca</a></button>
+            <div class="btn-group"></div>
         </div>
+    </header>
+    <div class="container">
+        <div class="card">
+            <img src="imanges/comics1.jpg">
+            <div class="card__head">comics1
+            </div>
+            <div class="card__head">autor:</div>
+        </div>
+        <div class="card">
+            <img src="imanges/comics2.jpg">
+            <div class="card__head">comics2
+            </div>
+            <div class="card__head">autor:</div>
+        </div>
+        <div class="card">
+            <img src="imanges/comics3.jpg">
+            <div class="card__head">comics3</div>
+            <div class="card__head">autor:</div>
+        </div>
+        <div class="card">
+            <img src="imanges/comics4.jpg">
+            <div class="card__head">comics4</div>
+            <div class="card__head">autor:</div>
+        </div>
+        <div class="card">
+            <img src="imanges/comics5.jpg">
+            <div class="card__head">comics5</div>
+            <div class="card__head">autor:</div>
+        </div>
+    </div>
+    <div class="codetheworld-io ">
+        <a href="#" style="--color: #ff0000" class="a-redes">
+            <i class="fa-brands fa-youtube"></i>
+        </a>
+        <a href="#" style="--color: #e1306c" class="a-redes">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" style="--color: #FF0050" class="a-redes">
+            <i class="fa-brands fa-tiktok" class="a-redes"></i>
+        </a>
+        <a href="#" style="--color: #00ffff" class="a-redes">
+            <i class="fa-brands fa-facebook" class="a-redes"></i>
+        </a>
+    </div>
 </body>
 </html>
