finalize la pagina de comics,falta los colores de fondo

--- a/paginas/comic.html
+++ b/paginas/comic.html
@@ -21,34 +21,42 @@
             <div class="btn-group"></div>
         </div>
     </header>
+    <br>
+    <div>
+        <h1 class="text-comics">¡Bienvenidos a nuestra página de cómics!
+            Aquí encontrarás un universo lleno de historias emocionantes, personajes inolvidables y aventuras que te harán soñar. Ya seas un aficionado de toda la vida o un recién llegado al mundo del cómic, tenemos algo para ti. Desde superhéroes épicos hasta relatos indie que desafían los límites, nuestra colección está diseñada para inspirar y entretener.
+            Explora, sumérgete en las páginas de nuestros cómics, y déjate llevar por la magia del noveno arte. No dudes en compartir tus opiniones y recomendaciones; ¡tu voz es importante para nosotros!
+            ¡Prepárate para descubrir, disfrutar y dejarte llevar por la historia!.Para ver mas comics ENTRA AQUI---→ <button type="button" class="btn margi"><a href="https://www.elektracomics.com.ar/">Aqui Para Mas</a></button> </h1>
+    </div>
     <div class="container">
         <div class="card">
-            <img src="imanges/comics1.jpg">
-            <div class="card__head">comics1
+            <img src="../imagenes/comics1.jpg">
+            <div class="card__head">DcversusMarvel
             </div>
-            <div class="card__head">autor:</div>
+            <div class="card__head">Autor:Peter David</div>
         </div>
         <div class="card">
-            <img src="imanges/comics2.jpg">
-            <div class="card__head">comics2
+            <img src="../imagenes/comics2.jpg">
+            <div class="card__head">Batman
             </div>
-            <div class="card__head">autor:</div>
+            <div class="card__head">Autor:Bruce Wayne</div>
         </div>
         <div class="card">
-            <img src="imanges/comics3.jpg">
-            <div class="card__head">comics3</div>
-            <div class="card__head">autor:</div>
+            <img src="../imagenes/comics3.jpg">
+            <div class="card__head">FlashPoint</div>
+            <div class="card__head">Autor:Geoff Johns</div>
         </div>
         <div class="card">
-            <img src="imanges/comics4.jpg">
-            <div class="card__head">comics4</div>
-            <div class="card__head">autor:</div>
+            <img src="../imagenes/comics4.jpg">
+            <div class="card__head">Deadpool</div>
+            <div class="card__head">Autor: Fabián Nicieza</div>
         </div>
         <div class="card">
-            <img src="imanges/comics5.jpg">
-            <div class="card__head">comics5</div>
-            <div class="card__head">autor:</div>
+            <img src="../imagenes/comics5.jpg" width="250px" height="250px">
+            <div class="card__head">Spider*gwen</div>
+            <div class="card__head">Autor:Gwen Stacy</div>
         </div>
+
     </div>
     <div class="codetheworld-io ">
         <a href="#" style="--color: #ff0000" class="a-redes">
