--- a/libros.html
+++ b/libros.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bienvenido a la pagina donde ofrecemos todo tipo de lectura desde Libro hasta Comics y Mangas!!! entre ya a la pagina para leer lo que busca ">
+    <meta name="Keywords" content="Comics, Comics mas vistos, Comics recomendados, Comics de terror, comics de accion, comics de romance">
     <link rel="stylesheet" href="css/style.css">
     <title>Biblioteca</title>
 </head>
@@ -42,7 +44,7 @@
         <h1>Sáenz de Urturi</h1>
     </div>
     
-    <div class="codetheworld-io ">
+    <main class="codetheworld-io ">
         <a href="#" style="--color: #ff0000" class="a-redes">
             <i class="fa-brands fa-youtube"></i>
         </a>
@@ -55,6 +57,6 @@
         <a href="#" style="--color: #00ffff" class="a-redes">
             <i class="fa-brands fa-facebook" class="a-redes"></i>
         </a>
-    </div>
+    </main>
 </body>
 </html>
