--- a/paginas/comic.html
+++ b/paginas/comic.html
@@ -4,7 +4,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    <meta name="description" content="Bienvenido a la pagian donde podes ver comics de todo tipo de cartegoria, ya se accion,romance,misterio,terror y muchos mas">
+    <meta name="Keywords" content="Comics, Comics mas vistos, Comics recomendados, Comics de terror, comics de accion, comics de romance  ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/comic.css">
@@ -18,6 +19,7 @@
         <div class="col-lg-12 menu">
             <button type="button" class="btn margi"><a href="mangas.html">Mangas</a></button>
             <button type="button" class="btn margi"><a href="../libros.html">Biblioteca</a></button>
+            <button type="button" class="btn margi"><a href="registro.html">Registro</a></button>
             <div class="btn-group"></div>
         </div>
     </header>
@@ -26,7 +28,32 @@
         <h1 class="text-comics">¡Bienvenidos a nuestra página de cómics!
             Aquí encontrarás un universo lleno de historias emocionantes, personajes inolvidables y aventuras que te harán soñar. Ya seas un aficionado de toda la vida o un recién llegado al mundo del cómic, tenemos algo para ti. Desde superhéroes épicos hasta relatos indie que desafían los límites, nuestra colección está diseñada para inspirar y entretener.
             Explora, sumérgete en las páginas de nuestros cómics, y déjate llevar por la magia del noveno arte. No dudes en compartir tus opiniones y recomendaciones; ¡tu voz es importante para nosotros!
-            ¡Prepárate para descubrir, disfrutar y dejarte llevar por la historia!.Para ver mas comics ENTRA AQUI---→ <button type="button" class="btn margi"><a href="https://www.elektracomics.com.ar/">Aqui Para Mas</a></button> </h1>
+            ¡Prepárate para descubrir, disfrutar y dejarte llevar por la historia!.Para ver mas comics ENTRA AQUI <b>----- > </b><button type="button" class="btn margi2"><a href="https://www.elektracomics.com.ar/">Aqui Para Mas</a></button> </h1>
+    </div>
+    <div>
+        <h1 class="titulo-comics">Aca vemos los comics mas vistos de la pagina</h1>
+        <h2 class="Comicstext1"><b>DcversusMarvel:</b>La historia gira en torno a un evento cósmico que provoca un choque entre los universos de DC y Marvel, lo que lleva a los héroes y villanos a enfrentarse en una serie de batallas.
+            El cómic fue un gran éxito y se convirtió en un hito para los fanáticos de ambos universos, destacando no solo por sus peleas, sino también por la mezcla de estilos y narrativas que ofreció.
+            Al final, se establece una resolución que permite la coexistencia de ambos universos, lo que dejó la puerta abierta para futuros crossovers.
+        </h2>
+        <h2 class="Comicstext1"><b>Batman:</b>Esta historia narra los orígenes de Bruce Wayne y su transformación en Batman.
+            La trama comienza con Bruce regresando a Gotham City después de años de entrenamiento. La historia muestra sus primeros pasos 
+            como vigilante, sus luchas internas y su relación con la policía, en particular con el teniente James Gordon. A medida que Batman se 
+            enfrenta a la corrupción y el crimen de la ciudad, se presenta a varios villanos emblemáticos, como Carmine Falcone.
+        </h2>
+        <h2 class="Comicstext1"><b>FlashPoint:</b> La historia gira en torno a Barry Allen, conocido como Flash, quien despierta en un mundo alternativo donde todo ha cambiado drásticamente.
+            En este universo, Barry nunca se convirtió en Flash y, en su lugar, vive en un mundo sumido en el caos. La Liga de la Justicia no existe, y 
+            las grandes potencias como Atlantis y Themyscira están al borde de la guerra. Bruce Wayne fue asesinado de niño, lo que llevó a un Thomas 
+            Wayne, su padre, a convertirse en un violento Batman. También hay un Aquaman que busca dominar el mundo y una Wonder Woman que lidera su propia nación.
+        </h2>
+        <h2 class="Comicstext1"><b>DeadPool:</b> Una de las series más emblemáticas es "Deadpool: The Circle Chase", que presenta al mercenario 
+            Wade Wilson, conocido como Deadpool, en su búsqueda por obtener una recompensa. La historia destaca su carácter excéntrico y su habilidad 
+            para romper la cuarta pared, lo que significa que a menudo se dirige directamente al lector.
+        </h2>
+        <h2 class="Comicstext1"><b>Spider*Gwen:</b> La serie sigue a Gwen, una joven que lucha por equilibrar su vida como estudiante de batería en una 
+            banda y su rol como heroína. En este universo, Gwen enfrenta no solo a villanos como el Lobo y el Duende Verde, sino también los desafíos 
+            personales de su vida cotidiana, incluyendo la presión de su padre, que es un policía que busca capturar a Spider-Woman.
+        </h2>
     </div>
     <div class="container">
         <div class="card">
