ya ahora si finalizado mangas

--- a/paginas/mangas.html
+++ b/paginas/mangas.html
@@ -17,7 +17,7 @@
       <div class="logo">
         <img src="../imagenes/iconomanga.png" class="fotoini">
         <h1>Biblioteca</h1>
-        <h2>
+        <h2 class="text-manga-ini">
           ¡Bienvenidos a nuestra página de manga! Aquí encontrarás un universo lleno de 
           historias cautivadoras, personajes memorables y arte impresionante. Ya seas un 
           fanático de los clásicos o estés buscando las últimas novedades, tenemos algo 
