--- a/libros.html
+++ b/libros.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description" content="Bienvenido a la pagina donde ofrecemos todo tipo de lectura desde Libro hasta Comics y Mangas!!! entre ya a la pagina para leer lo que busca ">
     <meta name="Keywords" content="Comics, Comics mas vistos, Comics recomendados, Comics de terror, comics de accion, comics de romance">
+
     <link rel="stylesheet" href="css/style.css">
     <title>Biblioteca</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="imagenes/logo 2.webp" height="200" width="200" class="fotoini">
-            <h1 class="titulo">Biblioteca</h1>
+            <img src="imagenes/logo-biblioteca.png" height="200" width="200" class="fotoini">
         </div>
         <div class="col-lg-12 menu">
-            <button type="button" class="btn margi"><a href="libros.html">Inicio</a></button>
-            <button type="button" class="btn margi"><a href="paginas/comic.html">Comics</a></button>
-            <button type="button" class="btn margi"><a href="paginas/mangas.html">Mangas</a></button>
-            <button type="button" class="btn margi"><a href="paginas/registro.html">Registro</a></button>
+            <button type="button" class="btn "><a href="paginas/comic.html"><b>Comics</b></a></button>
+            <button type="button" class="btn "><a href="paginas/mangas.html"><b>Mangas</b></a></button>
+            <button type="button" class="btn "><a href="paginas/registro.html"><b>Registro</b></a></button>
             <div class="btn-group"></div>
         </div>
     </header>
