--- a/paginas/comic.html
+++ b/paginas/comic.html
@@ -4,8 +4,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <meta name="description" content="Bienvenido a la pagian donde podes ver comics de todo tipo de cartegoria, ya se accion,romance,misterio,terror y muchos mas">
-    <meta name="Keywords" content="Comics, Comics mas vistos, Comics recomendados, Comics de terror, comics de accion, comics de romance  ">
+    <meta name="Keywords" content="Comics, Comics mas vistos, Comics recomendados, Comics de terror, comics de accion, comics de romance ">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/comic.css">
@@ -15,20 +17,20 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../imagenes/fotocomics.webp" height="200" width="200" class="fotoini">
+            <img src="../imagenes/logo.comics aa.png" height="200" width="200" class="fotoini">
         <div class="col-lg-12 menu">
-            <button type="button" class="btn margi"><a href="mangas.html">Mangas</a></button>
-            <button type="button" class="btn margi"><a href="../libros.html">Biblioteca</a></button>
-            <button type="button" class="btn margi"><a href="registro.html">Registro</a></button>
+            <button type="button" class="btn margi"><a href="mangas.html"><b>Mangas</b></a></button>
+            <button type="button" class="btn margi"><a href="../libros.html"><b>Biblioteca</b></a></button>
+            <button type="button" class="btn margi"><a href="registro.html"><b>Registro</b></a></button>
             <div class="btn-group"></div>
         </div>
     </header>
     <br>
-    <div>
+    <div class="descripciones">
         <h1 class="text-comics">¡Bienvenidos a nuestra página de cómics!
             Aquí encontrarás un universo lleno de historias emocionantes, personajes inolvidables y aventuras que te harán soñar. Ya seas un aficionado de toda la vida o un recién llegado al mundo del cómic, tenemos algo para ti. Desde superhéroes épicos hasta relatos indie que desafían los límites, nuestra colección está diseñada para inspirar y entretener.
             Explora, sumérgete en las páginas de nuestros cómics, y déjate llevar por la magia del noveno arte. No dudes en compartir tus opiniones y recomendaciones; ¡tu voz es importante para nosotros!
-            ¡Prepárate para descubrir, disfrutar y dejarte llevar por la historia!.Para ver mas comics ENTRA AQUI <b>----- > </b><button type="button" class="btn margi2"><a href="https://www.elektracomics.com.ar/">Aqui Para Mas</a></button> </h1>
+            ¡Prepárate para descubrir, disfrutar y dejarte llevar por la historia!.Para ver mas comics ENTRA AQUI <b>----- > </b><button type="button" class="btn margi2"><a href="https://www.elektracomics.com.ar/"><b>Aqui Para Mas</b></a></button> </h1>
     </div>
     <div>
         <h1 class="titulo-comics">Aca vemos los comics mas vistos de la pagina</h1>
